--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,8 @@
 	href="../static/img/favicon.ico">
 <link rel="shortcut icon" th:href="@{/img/favicon.ico}">
 <link rel="apple-touch-icon" th:href="@{/img/favicon.ico}">
-<link rel="apple-touch-icon" th:href="@{/img/favicon.ico}" sizes="192x192">
+<link rel="apple-touch-icon" th:href="@{/img/favicon.ico}"
+	sizes="192x192">
 <link rel="apple-touch-icon" th:href="@{/img/favicon.ico}" sizes="58x58">
 
 <!-- スタイル設定 -->
@@ -73,16 +74,23 @@
 					<h2 style="font-family: fantasy">住所検索 - 郵便番号</h2>
 					<form method="post" th:action="@{/zip}">
 						<div class="input-group">
-							<input type="number" class="form-control" name="zipcode"
-								placeholder="郵便番号 : XXXXXXX"> <span
+							<input type="number" id="post-number" class="form-control"
+								name="zipcode" placeholder="郵便番号 : XXXXXXX"> <span
 								class="input-group-btn">
-								<button type="submit" class="btn btn-primary">検索</button>
+								<button type="submit" class="btn btn-primary" onclick="check()">検索</button>
 							</span>
 						</div>
 					</form>
 				</div>
 			</div>
-
+			<div class="col-sm-6">
+				<div class="content-box">
+					<h2 style="font-family: fantasy">札幌の天気予報</h2>
+					<form method="get" th:action="@{/weather}">
+							<button type="submit" class="btn btn-primary">もっと詳しく</button>
+					</form>
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -98,5 +106,6 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
+	
 </body>
 </html>
