--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -86,8 +86,8 @@
 			<div class="col-sm-6">
 				<div class="content-box">
 					<h2 style="font-family: fantasy">札幌の天気予報</h2>
-					<form method="get" th:action="@{/weather}">
-							<button type="submit" class="btn btn-primary">もっと詳しく</button>
+					<form method="post" th:action="@{/weather}">
+							<button type="submit" id="weather" class="btn btn-primary">もっと詳しく</button>
 					</form>
 				</div>
 			</div>
@@ -106,6 +106,14 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
+	<script>
+	function check() {
+            var postNumber = document.getElementById("post-number").value
+            if (postNumber == '' || postNumber.length != 7) {
+                alert('郵便番号が正しくありません')
+            }
+        }
+	</script>
 	
 </body>
 </html>
