--- a/src/main/resources/templates/task/task.html
+++ b/src/main/resources/templates/task/task.html
@@ -66,42 +66,28 @@
 	</nav>
 
 	<!-- コンテンツ -->
-	<div class="container">
-		<div class="row">
-
-			<div class="col-sm-6">
-				<div class="content-box">
-					<h2 style="font-family: fantasy">住所検索 - 郵便番号</h2>
-					<form method="post" th:action="@{/zip}">
-						<div class="input-group">
-							<input type="number" id="post-number" class="form-control"
-								name="zipcode" placeholder="郵便番号 : XXXXXXX"> <span
-								class="input-group-btn">
-								<button type="submit" class="btn btn-primary" onclick="check()">検索</button>
-							</span>
-						</div>
-					</form>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="content-box">
-					<h2 style="font-family: fantasy">札幌の天気予報</h2>
-					<form method="post" th:action="@{/weather}">
-							<button type="submit" id="weather" class="btn btn-primary">もっと詳しく</button>
-					</form>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="content-box">
-					<h2 style="font-family: fantasy">直近のタスク</h2>
-					<form method="get" th:action="@{/task}">
-							<button type="submit"  class="btn btn-primary">タスク管理へ</button>
-					</form>
-				</div>
-			</div>
+	<h2>タスク管理</h2>
+	<hr>
+	<form method="post" th:action="@{/task/insert}">
+		<div class="input-group">
+			<input type="text" class="form-control" name="comment" placeholder="タスク内容"> 
+			<input type="date" class="from-control"name="limitday">
+			<span class="input-group-btn">
+				<button type="submit" class="btn btn-warning">追加</button>
+			</span>
 		</div>
-	</div>
-
+	</form>
+	<hr>
+	<ul th:each="task : ${taskEntity.taskList}">
+		<li><a th:href="@{'/task/delete/' + ${task.id} }"> <span
+				th:text="${task.comment}"></span>
+		</a> <span th:text="${task.limitday}"></span></li>
+	</ul>
+	<hr>
+	
+	<form method="post" th:action="@{/task/csv}">
+		<button type="submit" class="btn btn-info">CSV出力</button>
+	</form>
 	<!-- 共通スクリプト -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -114,14 +100,6 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-	<script>
-	function check() {
-            var postNumber = document.getElementById("post-number").value
-            if (postNumber == '' || postNumber.length != 7) {
-                alert('郵便番号が正しくありません')
-            }
-        }
-	</script>
-	
+
 </body>
 </html>
