--- a/src/main/resources/templates/task/task.html
+++ b/src/main/resources/templates/task/task.html
@@ -71,7 +71,7 @@
 	<form method="post" th:action="@{/task/insert}">
 		<div class="input-group">
 			<input type="text" class="form-control" name="comment" placeholder="タスク内容"> 
-			<input type="date" class="from-control"name="limitday">
+			<input type="date" class="form-control" name="limitday">
 			<span class="input-group-btn">
 				<button type="submit" class="btn btn-warning">追加</button>
 			</span>
