--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -114,14 +114,7 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-	<script>
-	function check() {
-            var postNumber = document.getElementById("post-number").value
-            if (postNumber == '' || postNumber.length != 7) {
-                alert('郵便番号が正しくありません')
-            }
-        }
-	</script>
+	<script src="task.js"></script>
 	
 </body>
 </html>
