--- a/src/main/resources/templates/gourmet/gourmet.html
+++ b/src/main/resources/templates/gourmet/gourmet.html
@@ -67,52 +67,19 @@
 
 	<!-- コンテンツ -->
 	<div class="container">
-		<div class="row">
+		<div class="content-box">
+			<h1>北海道グルメ</h1>
+			
+			<h3>「<span th:text="*{shopEntity.search}"></span>」の検索結果</h3>
 
-			<div class="col-sm-6">
-				<div class="content-box">
-					<h2 style="font-family: fantasy">住所検索 - 郵便番号</h2>
-					<form method="post" th:action="@{/zip}">
-						<div class="input-group">
-							<input type="number" id="post-number" class="form-control"
-								name="zipcode" placeholder="郵便番号 : XXXXXXX"> <span
-								class="input-group-btn">
-								<button type="submit" class="btn btn-primary" onclick="check()">検索</button>
-							</span>
-						</div>
-					</form>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="content-box">
-					<h2 style="font-family: fantasy">札幌の天気予報</h2>
-					<form method="post" th:action="@{/weather}">
-							<button type="submit" id="weather" class="btn btn-primary">もっと詳しく</button>
-					</form>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="content-box">
-					<h2 style="font-family: fantasy">直近のタスク</h2>
-					<form method="get" th:action="@{/task}">
-							<button type="submit"  class="btn btn-primary">タスク管理へ</button>
-					</form>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="content-box">
-					<h2 style="font-family: fantasy">飲食店検索-北海道</h2>
-					<form method="post" th:action="@{/gourmet}">
-						<div class="input-group">
-							<input type="text" name="gourmetName" class="form-control"
-								 placeholder="キーワードを入力"> <span
-								class="input-group-btn">
-								<button type="submit" class="btn btn-primary" >検索</button>
-							</span>
-						</div>
-					</form>
-				</div>
-			</div>
+			<!-- 基本1件だが、API構造に従い繰り返し構文とする -->
+			
+			<ul th:each="shop : ${shopEntity.shop}" th:object="${shop}">
+				<li><img class="shopimage" th:src="*{logo_image}" /></li>
+				<li><a th:href="*{address_url}" target="new"><span th:text="*{address}"></span></a></li>
+				<li><a th:href="*{url}" target="new"><span th:text="*{name}"></span></a></li>
+				<li><span th:text="*{access}"></span></li>
+			</ul>
 		</div>
 	</div>
 
@@ -128,7 +95,12 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-	<script src="task.js"></script>
-	
+	<script>
+		var zipcode = document.getElementById("test");
+		if(zipcode == null || zipcode == ''){
+			var text = document.getElementById("error");
+			text.innerHTML ="条件に該当する住所は見つかりませんでした。"
+		}
+	</script>
 </body>
 </html>
