--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
@@ -35,13 +36,13 @@
 	href="../static/css/ress.css">
 <link rel="stylesheet" th:href="@{/css/home.css}"
 	href="../static/css/home.css">
-
+<script th:src="@{/js/task.js}"></script>
 </head>
 
 <body th:classappend="${session.isDarkmode} ? 'mode-dark'">
 
 	<!-- 共通ヘッダ -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
 		<h1>
 			<a class="navbar-brand title-font" th:href="@{/}">WebPortal.com</a>
 		</h1>
@@ -68,33 +69,59 @@
 	<!-- コンテンツ -->
 	<div class="container">
 		<div class="content-box">
-			<h2>タスク管理</h2>
-			<hr>
-			<form method="post" th:action="@{/task/insert}">
-				<div class="input-group">
-					<input type="text" class="form-control" name="comment"
-						placeholder="タスク内容"> <input type="date"
-						class="form-control" name="limitday"> <span
-						class="input-group-btn">
-						<button type="submit" class="btn btn-warning" onclick="checkTask()">追加</button>
-					</span>
-				</div>
-			</form>
-			<hr>
+			<h2>ユーザ詳細</h2>
+			<div class="alert alert-success" role="alert" th:text="${error}" id="errorMessage"></div>
+			<div class="input-form">
+				<form method="post" th:action="@{/user/update}"
+					th:object="${userData}">
 
-			<ul th:each="task : ${taskEntity.taskList}">
-				<li><a th:href="@{'/task/delete/' + ${task.id} }" onclick="return deleteTask()"> <span
-						th:text="${task.comment}"></span>
-				</a> <span th:text="${task.limitday}"></span></li>
-			</ul>
+					<label for="user_id">ユーザID(メールアドレス)</label>
+					<p class="view-mail" th:text="*{user_id}"></p>
+					<input type="hidden" name="user_id" th:value="*{user_id}">
 
-			<hr>
+					<hr>
 
-			<form method="post" th:action="@{/task/csv}">
-				<button type="submit" class="btn btn-info">CSV出力</button>
-			</form>
+					<label for="password">パスワード</label>
+					<div class="form-group input-box"
+						th:classappend="${#fields.hasErrors('password')} ? 'has-error'">
+						<input type="password" class="form-control" name="password"
+							placeholder="xxxxxxxx" th:field="*{password}"> <span
+							class="text-danger" th:if="${#fields.hasErrors('password')}"
+							th:errors="*{password}">password error</span>
+						<p>※未入力の場合、前のパスワードを維持します</p>
+					</div>
+
+					<label for="user_name">ユーザ名</label>
+					<div class="form-group input-box"
+						th:classappend="${#fields.hasErrors('user_name')} ? 'has-error'">
+						<input type="text" class="form-control" name="user_name"
+							placeholder="情報 太郎" th:field="*{user_name}"> <span
+							class="text-danger" th:if="${#fields.hasErrors('user_name')}"
+							th:errors="*{user_name}">user_name error</span>
+					</div>
+
+					<label for="role">権限設定</label>
+					<div class="form-group input-box">
+						<div>
+							<input type="radio" name="role" th:field="*{role}" value="ROLE_ADMIN" id="role1">管理
+						</div>
+						<div>
+							<input type="radio" name="role" th:field="*{role}" value="ROLE_GENERAL" id="role2">一般
+						</div>
+						<span class="text-danger" th:if="${#fields.hasErrors('role')}"
+							th:errors="*{role}">role error</span>
+					</div>
+					<button class="btn btn-primary" type="submit" name="update">更新</button>
+				</form>
+					<hr>
+				<form method="post" th:action="@{/user/delete}" th:object="${userData}">
+					<input type="hidden" th:value="*{user_id}" name="user_id">
+					<button class="btn btn-danger" type="submit" name="delete" onclick="return deleteUser()">削除</button>
+				</form>
+			</div>
 		</div>
 	</div>
+
 	<!-- 共通スクリプト -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -107,17 +134,16 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
-		
 	<script>
-	let elements = document.getElementsByName('hobby');
-	function deleteTask(){
-		if(window.confirm('完了したタスクを削除します。よろしいですか？')){
+	
+	function deleteUser(){
+		var user_id = document.getElementById("user_id");
+		if(window.confirm("user_id = " + user_id)){
 			return true;
 		}else{
 			return false;
 		}
 	}
 	</script>
-
 </body>
 </html>
